add gender pay gap post

--- a/_sass/_muhstyle.scss
+++ b/_sass/_muhstyle.scss
@@ -59,6 +59,8 @@ h2 { margin-bottom: 1.2em; }
 
 /* A Post */
 
+.post { padding-right: 5vw; }
+
 header.post-header { margin-top: 1em; }
 
 h1.post-title { font-size: 2em; }
