--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>2017-2018 Pay Gap Data</title>
+    <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <script src="assets/js/Chart.bundle.js"></script>
     <script src="assets/js/underscore-min.js"></script>
     <script src="assets/js/chart-sorter.js"></script>
