--- a/_sass/_muhstyle.scss
+++ b/_sass/_muhstyle.scss
@@ -2,10 +2,10 @@
  * digitalWestie overrides
  */
 
-
 .wrapper { max-width:66vw; }
 
-h2 { margin-bottom: 1.2em; }
+h2 { margin-top: 0.1em; margin-bottom: 1.2em; }
+h3 { margin-top: 1em; }
 
 .intro-text { font-size:1.3em; }
 
