specify minima vers

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -18,11 +18,13 @@ $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
-// Width of the content area
-$content-width:    90vw !default;
+$table-text-align: left !default;
 
-$on-palm:          90vw !default;
-$on-laptop:        90vw !default;
+// Width of the content area
+$content-width:    800px !default;
+
+$on-palm:          600px !default;
+$on-laptop:        800px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
